Merged Pull Request '#634 feature/476-native-access-docs->main: DOCS: Add native access flag to example run commands'
* DOCS: Add native access flag to example run commands

Documents --enable-native-access=ALL-UNNAMED for the fat-jar examples and the module path alternative, per 51Degrees/device-detection-java#476.

* DOCS: Rework native access guidance for fat jar examples

Explains that a fat jar can only use ALL-UNNAMED, since everything inside it is part of the unnamed module, and points at the individual-jar layout that can be narrowed. Per 51Degrees/device-detection-java#476.

* DOCS: Correct the exec plugin snippet and command paths

The snippet had no goal or executable. exec:java runs in the Maven JVM
and passes <arguments> to main, so --enable-native-access there is
silently ignored; only exec:exec with <executable>java</executable>
forks a JVM that takes the flag.

The run commands used Windows-style backslashes inside a bash fence,
where they are escapes rather than separators.

---------

Co-authored-by: Eugene Dzhurinsky <justadreamer2007@gmail.com>